<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Encabezado azul fuerte -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:background="#0071bc"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Registro_Admision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registro_Admision"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Campo Apellidos y Nombres -->
    <TextView
        android:id="@+id/Apellidos_Nombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Apellidos_Nombres"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:inputType="text"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Apellidos_Nombres"
        app:layout_constraintTop_toTopOf="@+id/Apellidos_Nombres" />

    <!-- Campo Clave -->
    <TextView
        android:id="@+id/Clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Clave"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Apellidos_Nombres" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Clave"
        app:layout_constraintTop_toTopOf="@+id/Clave" />

    <!-- Fecha de Nacimiento -->
    <TextView
        android:id="@+id/Fecha_Nacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Fecha_Nacimiento"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Fecha_Nacimiento"
        app:layout_constraintTop_toTopOf="@+id/Fecha_Nacimiento" />

    <!-- Carreras -->
    <TextView
        android:id="@+id/Carreras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/Carreras"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Fecha_Nacimiento" />

    <RadioGroup
        android:id="@+id/GrupoCarreras"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Carreras">

        <RadioButton
            android:id="@+id/Ing_Ambiental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ing_Ambiental" />

        <RadioButton
            android:id="@+id/Ing_Sistemas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ing_Sistemas" />

        <RadioButton
            android:id="@+id/Ing_Mecanica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ing_Mecanica" />

        <RadioButton
            android:id="@+id/Administracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Administracion" />
    </RadioGroup>

    <!-- Campo Pregunta y checkboxes -->
    <TextView
        android:id="@+id/Pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/Pregunta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GrupoCarreras" />

    <CheckBox
        android:id="@+id/Radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Radio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pregunta" />

    <CheckBox
        android:id="@+id/Internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Internet"
        app:layout_constraintStart_toEndOf="@+id/Radio"
        app:layout_constraintTop_toTopOf="@+id/Radio" />

    <CheckBox
        android:id="@+id/Publicidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Publicidad"
        app:layout_constraintStart_toEndOf="@+id/Internet"
        app:layout_constraintTop_toTopOf="@+id/Radio" />

    <CheckBox
        android:id="@+id/Amigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Amigo"
        app:layout_constraintStart_toEndOf="@+id/Publicidad"
        app:layout_constraintTop_toTopOf="@+id/Radio" />

    <!-- Botón para enviar datos -->
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="92dp"
        android:layout_height="58dp"
        app:srcCompat="@android:drawable/sym_action_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Amigo" />
</androidx.constraintlayout.widget.ConstraintLayout>
